[package]
name = "rust_text_splitter"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_text_splitter"
crate-type = ["cdylib"]

[dependencies]
pulldown-cmark = "0.13.1"
pyo3 = "0.27.0"
tree-sitter = "0.24.4"
tree-sitter-python = "0.23.6"
