[package]
name = "rust_text_splitter"
version = "0.1.0"
edition = "2024"
description = "High-performance text splitter for Markdown and AST (Python) implementation in Rust."
license = "Apache-2.0"
repository = "https://github.com/Poseidoncode/rust_text_splitter"
readme = "../README.md"
authors = ["Poseidoncode <posidomhu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_text_splitter"
crate-type = ["cdylib"]

[dependencies]
pulldown-cmark = "0.13.1"
pyo3 = "0.27.0"
tree-sitter = "0.24.4"
tree-sitter-python = "0.23.6"
