[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "rust_text_splitter"
description = "High-performance text splitter for Markdown and AST (Python) implementation in Rust."
keywords = ["text-splitter", "rust", "python", "ast", "markdown"]
authors = [
    { name = "Poseidoncode", email = "posidomhu@gmail.com" },
]
readme = "../README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
